# hsi-data-reader

./: .gitignore  CMakeLists.txt  README.md
data/: example_config.txt  example_header.txt
src/: hsi_data_reader.cpp  hsi_data_reader.h  test_reader.cpp  test_visualizations.cpp  visualize.cpp
